UtahLiveDataTest/src/objects/ApplicationReview__c.object
<CustomObject>
    <description>[Business] This object is used for the Review of the Grantee Application in the State as a Grantee Application</description>
    <fields>
        <fullName>Agency__c</fullName>
        <formula>CreatedBy.AccountNameFormulaField__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Announcement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funding Opportunity</label>
        <referenceTo>Announcement__c</referenceTo>
        <relationshipName>Reviews1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Application for which the review is being done</description>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipName>ApplicationReviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Award__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipName>Application_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EditReview__c</fullName>
        <description>Field to control the hiding of Delete button when the Application is already approved</description>
        <formula>Application__r.GranteeDisplayEdit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EvaluationStatus__c</fullName>
        <label>Evaluation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Evaluated</fullName>
                    <default>true</default>
                    <label>Evaluated</label>
                </value>
                <value>
                    <fullName>Converted to Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FOALead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FOALead</label>
        <referenceTo>FOALead__c</referenceTo>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FundingOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funding Opportunity</label>
        <referenceTo>Announcement__c</referenceTo>
        <relationshipName>Application_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HideAnnouncementEdit__c</fullName>
        <formula>OR(NOT(ISPICKVAL(FundingOpportunity__r.Status__c,&apos;Created&apos;)), 
NOT(ISPICKVAL(FundingOpportunity__r.Status__c,&apos;Reviewed&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Announcement Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideApplicationEdit__c</fullName>
        <formula>NOT(OR(ISPICKVAL(Application__r.Status__c,&apos;Created&apos;), ISPICKVAL(Application__r.Status__c,&apos;Internally Reviewed&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Application Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideConvertBtn__c</fullName>
        <formula>NotOwner__c || ISPICKVAL(EvaluationStatus__c, &apos;Converted to Opportunity&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideConvertBtn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditBtn__c</fullName>
        <description>Logic for Hiding Edit Button</description>
        <formula>OR(AND(FundingOpportunity__c!=null,FundingOpportunity__r.HideEditBtn__c),
   AND(Award__c!=null,Award__r.HideNewBtn__c),
   AND(Application__c!=null,Application__r.RenderGranteeDelete__c)
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Logic for Hiding Edit Button</inlineHelpText>
        <label>Hide Edit Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideOnAwardStatus__c</fullName>
        <formula>IF(Award__c!=null,Award__r.HideNewBtn__c,Award__r.HideNewBtn__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideOnAwardStatus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <inlineHelpText>1 - NA
2 - Low
3 - Medium
4 - High
5 - Very High</inlineHelpText>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - NA</fullName>
                </value>
                <value>
                    <fullName>2 - Low</fullName>
                    <default>true</default>
                    <label>2 - Low</label>
                </value>
                <value>
                    <fullName>3 - Medium</fullName>
                </value>
                <value>
                    <fullName>4 - High</fullName>
                </value>
                <value>
                    <fullName>5 - Very High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Justification__c</fullName>
        <label>Justification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NotOwner__c</fullName>
        <formula>NOT(CreatedById == $User.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NotOwner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NotSameAccount__c</fullName>
        <formula>NOT(CreatedBy.Organization__c == $User.Organization__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NotSameAccount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PreApplication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Object to store the PreApplication Reviews</description>
        <label>Pre-Application</label>
        <referenceTo>PreApplication__c</referenceTo>
        <relationshipName>PreApplication_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Reviewer Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecipientAgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RecipientAgency</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relevance__c</fullName>
        <inlineHelpText>1 - NA 
2 - Low 
3 - Medium 
4 - High 
5 - Very High</inlineHelpText>
        <label>Relevance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - NA</fullName>
                </value>
                <value>
                    <fullName>2 - Low</fullName>
                    <default>true</default>
                    <label>2 - Low</label>
                </value>
                <value>
                    <fullName>3 - Medium</fullName>
                </value>
                <value>
                    <fullName>4 - High</fullName>
                </value>
                <value>
                    <fullName>5 - Very High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReviewComments__c</fullName>
        <description>Comments entered by the External Users for the Grantee Application</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReviewType__c</fullName>
        <label>Review Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fiscal</fullName>
                </value>
                <value>
                    <fullName>Program</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>SME Review</fullName>
                </value>
                <value>
                    <fullName>Peer/Author Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checkbox to specify that review was done</description>
        <label>Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReviewandEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A boolean value to Specify that the Reviewer has also edited the Application/Pre-Application</description>
        <label>Review and Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <formula>( IF(ISBLANK(VALUE(LEFT(TEXT(Impact__c),1))),0,VALUE(LEFT(TEXT(Impact__c),1))) + IF(ISBLANK(VALUE(LEFT(TEXT(Relevance__c),1))),0,VALUE(LEFT(TEXT(Relevance__c),1))))
/
( (IF(ISBLANK(VALUE(LEFT(TEXT(Impact__c),1))),0,1)) + IF(ISBLANK(VALUE(LEFT(TEXT(Relevance__c),1))),0,1) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sent for Review</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Review Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StrategicPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>StrategicPlan</label>
        <referenceTo>StrategicPlan__c</referenceTo>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>This specifies the office type</description>
        <label>Office Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Program</fullName>
                    <default>true</default>
                    <label>Program</label>
                </value>
                <value>
                    <fullName>Fiscal</fullName>
                </value>
                <value>
                    <fullName>Grants</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Application Review</label>
    <nameField>
        <displayFormat>Rev-{000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>